--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,16 +10,20 @@ services:
     volumes:
       - mysql-data:/var/lib/mysql
   phpmyadmin:
-    image: phpmyadmin/phpmyadmin
+    image: phpmyadmin
     ports:
       - "8080:80"
     environment:
       - PMA_HOST=mysql
       - MYSQL_ROOT_PASSWORD=secret
+      - PMA_ARBITRARY=1
     depends_on:
       - mysql
   www:
-    build: .
+    build:
+      context: .
+      args:
+        - HOST_UID=$(id -u)
     ports:
       - "80:80"
     volumes:
